--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 /tmp/*
 !/log/.keep
 !/tmp/.keep
+.DS_Store
 
 # Ignore uploaded files in development
 /storage/*
@@ -28,3 +29,4 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
